[gd_scene load_steps=8 format=3 uid="uid://c4xb2roe86xot"]

[ext_resource type="Theme" uid="uid://dwdrlg1gqag5x" path="res://menus/Theme.tres" id="1_o2r1e"]
[ext_resource type="Script" path="res://menus/lose/script.gd" id="2_470t1"]
[ext_resource type="Texture2D" uid="uid://bbrc6ot10hw7v" path="res://menus/lose/background.png" id="2_fq4mh"]
[ext_resource type="Texture2D" uid="uid://pafnhto3ufs6" path="res://menus/lose/background2.png" id="4_mwo3b"]

[sub_resource type="Animation" id="Animation_y0ocp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_w40ti"]
resource_name = "shake"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e1s3t"]
_data = {
"RESET": SubResource("Animation_y0ocp"),
"shake": SubResource("Animation_w40ti")
}

[node name="SceneMenuLose" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_o2r1e")
script = ExtResource("2_470t1")

[node name="LabelLose" type="Label" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 200.446
offset_right = 954.0
offset_bottom = 419.446
rotation = -0.108868
scale = Vector2(1.11431, 1.21978)
theme_override_font_sizes/font_size = 180
text = "You Lose"

[node name="LabelOutOfThyme" type="Label" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 434.446
offset_right = 1474.0
offset_bottom = 653.446
rotation = -0.123726
scale = Vector2(1.11431, 1.21978)
theme_override_font_sizes/font_size = 32
text = "(you're out of time (and out of thyme))"

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(1156, 619)
texture = ExtResource("2_fq4mh")

[node name="Background2" type="Sprite2D" parent="."]
visible = false
position = Vector2(1156, 619)
texture = ExtResource("4_mwo3b")

[node name="ButtonReplay" type="Button" parent="."]
layout_mode = 0
offset_left = 228.0
offset_top = 924.0
offset_right = 561.0
offset_bottom = 1060.0
rotation = 0.155687
theme_override_font_sizes/font_size = 100
text = "Replay"

[node name="ButtonMain" type="Button" parent="."]
layout_mode = 0
offset_left = 92.0
offset_top = 1220.0
offset_right = 441.0
offset_bottom = 1313.0
rotation = -0.08944
text = "Main Menu"

[node name="DestinationLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1810.23
offset_top = 167.691
offset_right = 2558.23
offset_bottom = 487.691
rotation = -0.0450573
theme_override_colors/font_color = Color(0.729412, 0.654902, 0.560784, 1)
theme_override_font_sizes/font_size = 42
text = "Distance to delivery: 0ft"

[node name="TimeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1752.23
offset_top = 274.691
offset_right = 2500.23
offset_bottom = 594.691
rotation = 0.0413639
theme_override_colors/font_color = Color(0.729412, 0.654902, 0.560784, 1)
theme_override_font_sizes/font_size = 42
text = "Time remaining: 0s"

[node name="ThymeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1924.23
offset_top = 414.691
offset_right = 2672.23
offset_bottom = 734.691
rotation = -0.0853283
theme_override_colors/font_color = Color(0.729412, 0.654902, 0.560784, 1)
theme_override_font_sizes/font_size = 42
text = "Thyme remaining: 0"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "shake"
libraries = {
"": SubResource("AnimationLibrary_e1s3t")
}
